Replace deprecated URL constructor